tests/golden/openshift/openshift/openshift/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: keycloak-dev
    openshift.io/cluster-monitoring: 'true'
  name: keycloak-dev
